fixing clipped content of select boxes

--- a/theme/src/styles/main.sass
+++ b/theme/src/styles/main.sass
@@ -149,3 +149,5 @@ body
 .bx--inline-notification__title
   color: #e0182d
 
+.bx--select-input
+  line-height: 1.1
